--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "cSpell.words": [
+    "nord",
+    "ofetch",
+    "synckit",
     "textlint",
     "vitepress",
-    "vuejs"
+    "vuejs",
+    "xmlhttprequest"
   ]
 }
