--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build with VitePress
-        run: pnpm run build -- --base /reading-vuejs-core-vapor/
+        run: pnpm run build --base /reading-vuejs-core-vapor/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
