chore(docs): lint

--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -6,7 +6,10 @@
       }
     },
     "prh": {
-      "rulePaths" :["rules/prh-punctuation-mark.yml"]
+      "rulePaths": [
+        "rules/prh-punctuation-mark.yml",
+        "rules/prh-called.yml"
+      ]
     }
   }
 }
