--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -8,7 +8,8 @@
     "prh": {
       "rulePaths": [
         "rules/prh-punctuation-mark.yml",
-        "rules/prh-called.yml"
+        "rules/prh-called.yml",
+        "rules/prh-interface.yml"
       ]
     }
   }
